<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.metarapp.viewmodel.MetarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lyt_edit_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/airport_code"
                android:text="@string/label_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/edittxt_label_size"/>
            <EditText
                android:id="@+id/edit_code"
                android:layout_width="@dimen/edittxt_width"
                android:layout_height="wrap_content"
                android:hint="@string/hint_icao_code"
                android:layout_marginStart="@dimen/edittxt_margin_start"
                android:text="@={viewModel.mEditTextCodeEntry}"/>
            <Button
                android:id="@+id/btn_get_metar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_label_get_metar"
                android:onClick="@{()-> viewModel.onSendClicked()}"/>
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_metar_data_details"
            app:viewModel="@{viewModel}"
            app:layout_constraintTop_toBottomOf="@+id/lyt_edit_code"
            android:layout_marginTop="@dimen/detail_view_margin_top"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>