<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.metarapp.viewmodel.MetarViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.isDownloadProgress ? View.VISIBLE : View.GONE}"/>

        <ScrollView
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isDownloadProgress ? View.GONE : View.VISIBLE}">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#E6E6E6"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/txt_internet_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="20dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_red_light"
                        android:text="@string/txt_no_internet_connectivity"
                        android:visibility="@{viewModel.hasNetworkConnectivity ? View.GONE : View.VISIBLE}"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/txt_station_availability"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="20dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_red_light"
                        android:text="@string/txt_airport_not_found"
                        android:visibility="@{viewModel.isStationAvailable ? View.GONE : View.VISIBLE}"
                        android:gravity="center"/>

                    <LinearLayout
                        android:id="@+id/lyt_detail_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@+id/txt_internet_status"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:visibility="@{viewModel.detailedViewVisibility ? View.VISIBLE : View.INVISIBLE}">

                        <TextView
                            android:id="@+id/txt_cached_data_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:text="@string/txt_last_available_update"
                            android:visibility="@{viewModel.hasCachedDataAvailability ? View.VISIBLE : View.GONE}"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/txt_icao_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.mICAOCode}"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@+id/txt_cached_data_status"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="20dp"/>
                        <TextView
                            android:id="@+id/txt_label_raw_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_raw_data"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@+id/txt_icao_code"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/txt_raw_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.mRawData}"
                            android:textSize="20sp"
                            app:layout_constraintTop_toBottomOf="@+id/txt_label_raw_data"
                            app:layout_constraintLeft_toLeftOf="parent"/>
                        <TextView
                            android:id="@+id/txt_label_decoded_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_decoded_data"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@+id/txt_raw_data"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/txt_decoded_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.mDecodedData}"
                            android:textSize="20sp"
                            app:layout_constraintTop_toBottomOf="@+id/txt_label_decoded_data"
                            app:layout_constraintLeft_toLeftOf="parent"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>
    </RelativeLayout>
</layout>